# plotclicker

./: README.md  pyproject.toml  requirements.txt
.mulch/: mulch-scaffold.json
src/plotclicker/: assess.py  cli.py  gui.py  io_utils.py  workspace_manager.py
workspaces/refactor/: default-workspace.toml
